page header, spacing fixes

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -26,6 +26,11 @@ body{
 #words-well{
 		position:relative;
 }
+#page-head{
+		position:relative;
+		top:-40px;
+		margin-bottom:-20px;
+}
 #prev-page-arrow{
 		position:absolute;
 		left:-25px;
